# Reverse-myTools

./: .gitignore  README.md
BUF/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  main.c
BUF/debug/: .ninja_deps  .ninja_log  BUF  CMakeCache.txt  build.ninja  cmake_install.cmake
BUF/debug/.cmake/api/v1/reply/: cache-v2-ae77f5ff69f2aa96672f.json  cmakeFiles-v1-df80f61cf336362c8b08.json  codemodel-v2-1ece372c014a251db14e.json  codemodel-v2-2b4bfbf9798213418717.json  index-2022-11-20T16-32-24-0139.json  index-2022-11-20T17-01-51-0234.json  target-BUF-Debug-a7aba9fe4853942bad41.json  target-BUF-Debug-ee80796a86d478ea0735.json
Bof/: CMakeCache.txt  CMakeLists.txt  Makefile  bof-1.c  cmake_install.cmake
Emulator/: CMakeLists.txt  main.c
GuLoader/GuLoader-decode-1/: Cargo.toml
GuLoader/GuLoader-decode-1/src/: main.rs
RC4/rc4/: Cargo.toml
RC4/rc4/src/: main.rs
RC4impl/: CMakeLists.txt  RC4impl.sln  RC4impl.vcxproj  RC4impl.vcxproj.filters  README.md  main.c
RC4impl/RC4impl.dir/Release/: RC4impl.exe.recipe
RC4impl/RC4impl.dir/Release/RC4impl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  RC4impl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RUST/: README.md
RUST/shellExec/: Cargo.toml
RUST/shellExec/src/: main.rs
Shelltest/: README.md  original  original.c  shelltest  shelltest.c
impossible/: Cargo.toml
impossible/src/: main.rs
shellExec/: CMakeLists.txt  README.md  main.c
